--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,20 @@
 body {
-    background-color: lightgray;
+    background-color: white;
+}
+
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.libre {
+  background-color: green;
+}
+
+
+.emprunte {
+  background-color: red;
 }
