--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -17,6 +17,14 @@ h2,
     font-weight: 200;
 }
 
+.adresseLigne{
+  margin-top: 1rem !important;
+}
+
+.nav {
+  padding-top: 2rem !important;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #000;
@@ -25,6 +33,7 @@ h2,
   -moz-transition: all 0.2s;
   transition: all 0.2s;
   max-height: 100px;
+  margin-bottom: 6rem !important;
 }
 
 .utilisateur-popup-link{
