--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,11 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
 
+    <link
+        rel="stylesheet"
+        href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css"
+      />
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </head>
