--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -66,6 +66,18 @@ padding: .5rem .5rem;
   font-family: "Cracked", Regular;
 }
 
+.btn-group-xs > .btn, .btn-xs {
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+  margin-top: 0.25rem;
+}
+
+.intrumentNomLigne {
+  margin-bottom: 0 !important;
+}
+
 .swal2-cancel{
   color: #fff;
   background-color: #5c636a;
